@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST raspberrypi-image-3.10.38_pre-r20140427.tar.xz 10834816 SHA256 9f00d57e4f14233329f713110991b62b3c4cb22ae5024e82dd4a6856b5667dc3 SHA512 d61c6698a4b52b77a2967ea80766519db84f61388e7e32018a3ceb5f77d8bbee24f409a79bbbfbdace2dc154d873e8a5498f3b957db836fef43f6688de84d95d WHIRLPOOL ba21788cc709e0b6e8c1f286c8e213fad6221b6ef97db6ea3e80cf08370998c0224b0272216685eabd5ff2efdaac72e256655b395a5e3f1e7a4fce6691cc2d8f
 DIST raspberrypi-image-3.12.36_pre-r20150206.tar.xz 11038896 SHA256 999db53f2b0293de377db5b4fbe00a3990a0e29f4eece1c145c2a921edbfddeb SHA512 c0254bb1da52651ef6d308b3204397c441f4bf8f6272cceefde0fa1e755397b252be55d2e7e397b352b319722d9195c0b9b7fed8ae301da4fa4c0d2c04618d7c WHIRLPOOL 20e0b529bcc01902ed453b8e6f0ae152a38e61ae6b07a95e398f830a98c8d199b574ca15b46728b683139a288a5f6eabcc8a08e75c007bd5a3e1fb53263c5d46
 DIST raspberrypi-image-3.18.10_pre-r20150330.tar.xz 12976572 SHA256 ea35d0a90b06951e5919ec5a5918291e1ad1c26fb486b103b4be6f6232126556 SHA512 4a9f3ea141a4135d890d6e52867f533293f9ec9237f5be370674599f17cf4edc626ab38de5e493ae0b013e8768eaf5126b2e18662e40cb5cd4587b49ffe8547a WHIRLPOOL a88dcefdd785a68f88f8d882f7e516eb857670dae11150f2000551f9adb316b35cf17f584bce228602e5a518cbbc46c81c65e74d738cf1b5b0c24e95c26e373b
 DIST raspberrypi-image-3.19.3_pre-r20150327.tar.xz 12973956 SHA256 c1025b57a2423a1c2d98c136a5e332139a6734b2ddb3a605526c62d51ba1000d SHA512 5293ff2b75dc6f38f0e4dea5bb8322fdae9a799a1dc2e7f9791d8383e70e2ed39131a8e211514f74d72266b2570c8707abb735905a97f0ecf1c4ca595ac99fd6 WHIRLPOOL 0ef71e26e52014e4fba91edad94fb8bda315ecddf16108c713c4a2303e8a61de2df5626d41c2b45f7b7812252893d74fbb86c28ae1f85eb0441746924598ec93
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUcAecACgkQknrdDGLu8JB7+AEAl2RF/4I0EPC2XVxpSMTU8bbs
-3sm5/E2udZGQ5c0iQUIA/jJnACyUYSz4dCfHJVUmM52WWK+BNt9XXyMUE7duYtRp
-=VOz9
+iF4EAREIAAYFAlUcDq0ACgkQknrdDGLu8JA6BQD/cncVgvyYtB7ZejOQytFbmL6/
+F9yGQixgAL47qk+QTKAA/3KCxOlCoSQ9rKtkUF4IW/h8qj848BM8Zpbl+SJR9IC9
+=kXGJ
 -----END PGP SIGNATURE-----
